# simulation-mbr

./: Cargo.toml  README.md  readme.txt
src/: animal.rs  config.rs  food.rs  main.rs  model.rs  web.rs  world.rs
